--- a/src/components/ArticleServices/style.module.scss
+++ b/src/components/ArticleServices/style.module.scss
@@ -5,6 +5,7 @@
   text-indent: 15px;
   word-wrap: break-word;
   max-width: 100%;
+  white-space: pre-line;
 }
 .services__title {
   @extend %subtitle-font;
