--- a/src/app/community/style.module.scss
+++ b/src/app/community/style.module.scss
@@ -34,6 +34,10 @@
   &__wrapper {
     margin-top: 30px;
     width: 55%;
+
+    @media screen and (max-width: 756px) {
+      width: 62%;
+    }
   }
 
   &__text {
