--- a/src/app/about/style.module.scss
+++ b/src/app/about/style.module.scss
@@ -22,7 +22,7 @@
       font-weight: 600;
       @media screen and (max-width: 1075px) {
         font-size: 14px;
-        width: 320px;
+        width: 310px;
       }
     }
 
@@ -32,7 +32,7 @@
       @extend %text-medium-font;
       @media screen and (max-width: 1075px) {
         font-size: 14px;
-        width: 320px;
+        width: 310px;
       }
     }
   }
@@ -43,11 +43,13 @@
 
   &__cards {
     width: 87%;
+    
     &_cardCont {
       display: flex;
       justify-content: space-around;
       align-items: center;
       width: 100%;
+      margin-top: 30px;
 
       @media screen and (max-width: 1075px) {
         display: grid;
@@ -59,6 +61,8 @@
       @extend %subtitle-font;
       @media screen and (max-width: 1075px) {
         font-size: 18px;
+        display: grid;
+        justify-content: center;
       }
     }
 
@@ -69,6 +73,7 @@
       @media screen and (max-width: 1075px) {
         font-size: 14px;
         width: 270px;
+        margin-left: 20px;
       }
     }
 
@@ -82,6 +87,13 @@
       cursor: pointer;
       transition: background-color 0.3s ease;
       margin-top: 20px;
+      
+
+      @media screen and (max-width: 1075px) {
+        font-size: 14px;
+        height: 35px;
+        margin-left: 30px;
+      }
 
       & > a {
         color: inherit;
@@ -105,6 +117,11 @@
       &:focus {
         outline: 0;
         outline-offset: 0;
+      }
+
+      @media screen and (max-width: 1075px) {
+        font-size: 14px;
+        margin-left: 30px;
       }
     }
 
