--- a/src/app/mainlist/style.module.scss
+++ b/src/app/mainlist/style.module.scss
@@ -74,6 +74,55 @@
       margin-inline-start: 0;
     }
   }
+
+  &__sub {
+    display: flex;
+    flex-direction: column;
+    margin-top: 35px;
+    margin-bottom: 30px;
+    flex-wrap: wrap;
+    margin-left: 62px;
+
+    @media screen and (max-width: 960px) {
+      align-content: center;
+    }
+  }
+
+  &__email {
+    border: none;
+    border-bottom: 1px #a5a5a5 solid;
+    padding-bottom: 10px;
+    margin-right: 20px;
+    width: 240px;
+    resize: none;
+    @extend %text-font;
+    &:active,
+    &:hover,
+    &:focus {
+      outline: 0;
+      outline-offset: 0;
+    }
+
+    @media screen and (max-width: 960px) {
+      margin-right: 0;
+    }
+  }
+
+  &__btn {
+    @extend %button-font;
+    background-color: #41b619;
+    border: none;
+    height: 45px;
+    padding: 0 30px;
+    border-radius: 30px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    margin-top: 20px;
+
+    &:hover {
+      background-color: #262626;
+    }
+  }
 }
 
 .circle {
