--- a/src/app/mainlist/style.module.scss
+++ b/src/app/mainlist/style.module.scss
@@ -10,7 +10,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    gap: 3.5vw;
+    margin-bottom: 20px;
   }
 
   &__box {
@@ -78,22 +78,15 @@
   &__sub {
     display: flex;
     flex-direction: column;
-    margin-top: 35px;
-    margin-bottom: 30px;
+    margin: 8px 0 25px 5px;
     flex-wrap: wrap;
-    margin-left: 62px;
-
-    @media screen and (max-width: 960px) {
-      align-content: center;
-    }
   }
 
   &__email {
     border: none;
     border-bottom: 1px #a5a5a5 solid;
     padding-bottom: 10px;
-    margin-right: 20px;
-    width: 240px;
+    width: 298px;
     resize: none;
     @extend %text-font;
     &:active,
@@ -101,10 +94,6 @@
     &:focus {
       outline: 0;
       outline-offset: 0;
-    }
-
-    @media screen and (max-width: 960px) {
-      margin-right: 0;
     }
   }
 
@@ -127,14 +116,14 @@
 
 .circle {
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
 
   @media screen and (max-width: 756px) {
     justify-content: center;
   }
 
   @media (min-width: 756px) and (max-width: 960px) {
-    justify-content: flex-end;
+    justify-content: center;
   }
 
   &__image {
@@ -147,7 +136,7 @@
 .wrapper {
   width: 50%;
   margin-inline-end: 22px;
-  padding: 0 83px;
+  padding: 0 40px;
 
   @media screen and (max-width: 756px) {
     width: 70%;
