--- a/src/app/about/style.module.scss
+++ b/src/app/about/style.module.scss
@@ -46,14 +46,19 @@
     
     &_cardCont {
       display: flex;
-      justify-content: space-around;
+      justify-content: space-between;
       align-items: center;
       width: 100%;
       margin-top: 30px;
+      margin-bottom: 50px;
 
       @media screen and (max-width: 838px) {
         display: grid;
         justify-content: center;
+      }
+
+      @media screen and (max-width: 1075px) {
+        justify-content: space-around;
       }
     }
 
