--- a/src/app/about/imgStyle.scss
+++ b/src/app/about/imgStyle.scss
@@ -1,7 +1,7 @@
 .about__cards_image{
-    width: 380px;
-    height: 280px;
-    @media screen and (max-width: 1075px) {
+    width: 616px;
+    height: 387px;
+    @media screen and (max-width: px) {
       width: 320px;
       height: 225px;
     }
